--- a/models/staging/jaffle_shop/src_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/src_jaffle_shop.yml
@@ -16,6 +16,10 @@ sources:
 
         - name: orders
           description: Raw Order Data.
+          loaded_at_field: _etl_loaded_at
+          freshess:
+            warn_after: {count:12, period: hour}
+            error_after: {count: 24, period: hour}
           columns:
             - name: id
               description: Primary key for orders.
